- added angular and java lessons - updated maven lesson